# libxsql

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  basic_table.cpp  cached_table.cpp  repro_nochange_bug.cpp  server_client.cpp  writable_table.cpp
include/xsql/: database.hpp  functions.hpp  json.hpp  script.hpp  status.hpp  vtable.hpp  xsql.hpp
include/xsql/socket/: client.hpp  protocol.hpp  server.hpp  socket.hpp
include/xsql/thinclient/: cli.hpp  client.hpp  clipboard.hpp  http_query_server.hpp  json_helpers.hpp  server.hpp  thinclient.hpp
